--- a/style.css
+++ b/style.css
@@ -63,6 +63,6 @@ hr {
   transition: all 300ms ease;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
