--- a/style.css
+++ b/style.css
@@ -66,3 +66,17 @@ hr {
   justify-content: space-around;
   align-items: center;
 }
+
+@media (max-width: 700px) {
+  #password-1,
+#password-2 {
+  transition: all 300ms ease;
+  width: fit-content;
+  font-size: 15px;
+  font-weight: 700;
+  padding: 10px;
+  border-radius: 8px;
+  color: rgb(47, 165, 86);
+  background-color: rgb(55, 55, 55);
+}
+}
