--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lato:wght@300;400;900&family=Poppins:wght@100;200;300;400;500&family=Potta+One&display=swap');
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Arial Narrow", Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: rgb(38, 40, 47);
+  width: 100%;
+  height: 400px;
+   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .container {
   height: 80vh;
@@ -20,13 +27,14 @@ h1 {
   font-size: 40px;
   font-weight: 900;
   line-height: 40px;
+  margin: 0;
 }
 span {
   color: rgb(0, 224, 75);
 }
 p {
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 600;
   line-height: 20px;
 }
 button {
@@ -52,7 +60,7 @@ hr {
 #password-2 {
   transition: all 300ms ease;
   width: fit-content;
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 500;
   padding: 10px;
   border-radius: 8px;
@@ -71,7 +79,7 @@ hr {
   #password-1,
 #password-2 {
   transition: all 300ms ease;
-  width: fit-content;
+  /* width: fit-content; */
   font-size: 15px;
   font-weight: 700;
   padding: 10px;
