--- a/style.css
+++ b/style.css
@@ -50,12 +50,16 @@ button {
   border-radius: 8px;
   cursor: pointer;
 }
+/* #copy-btn{
+  padding: 10px;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 15px;
+} */
 button:hover {
   background-color: rgb(26, 133, 60);
 }
-hr {
-  margin: 30px 0px;
-}
+
 #password-1,
 #password-2 {
   transition: all 300ms ease;
@@ -66,14 +70,32 @@ hr {
   border-radius: 8px;
   color: rgb(47, 165, 86);
   background-color: rgb(55, 55, 55);
+  transition: all 300ms ease;
 }
+
+#password-1:hover, #password-2:hover{
+  background-color: rgb(29, 29, 29);
+}
+
 .passwords {
   transition: all 300ms ease;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
+#hr{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width:100%;
+}
+hr {
+  margin: 30px 10px;
+  width:30%;
+}
+
 
 @media (max-width: 700px) {
   #password-1,
